syntax = "proto3";

/**
 * This is an example of a protobuf message.
 */

package speaker;


option java_multiple_files = true;
option java_package = "org.Muhammad.example.speaker";
option java_outer_classname = "SpeakerProto";

service Speaker {

   rpc SpeakerMode(SpeakerModeRequest) returns (SpeakerModeResponse) {};
   rpc SpeakerAction(SpeakerActionRequest) returns (SpeakerActionResponse) {};

}

message SpeakerFunction{
    string Volume_Up = 1;
    string Volume_Down = 2;
    string Mute = 3;
    string Speaker_On = 4;
    string Speaker_Off = 5;
}


message SpeakerModeRequest {
    SpeakerFunction speakerFunction = 1;
}

message SpeakerModeResponse {
   string mode = 1;
}


message SpeakerActionRequest {
    SpeakerFunction speakerFunction = 1;
}

message SpeakerActionResponse {
   string action = 1;
}

